--- a/SPAPP/Base.lproj/Main.storyboard
+++ b/SPAPP/Base.lproj/Main.storyboard
@@ -144,6 +144,21 @@
                             </mask>
                         </variation>
                     </view>
+                    <navigationItem key="navigationItem" id="AxI-lV-0gF">
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="iaW-28-UKp">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="QLm-i2-lJf">
+                                <rect key="frame" x="16" y="0.0" width="351" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Back">
+                                    <color key="titleColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="cancelButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="V6D-hI-IMj"/>
+                                </connections>
+                            </button>
+                            <color key="tintColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="answerTableView" destination="dDo-ad-t0B" id="z08-T8-5QU"/>
                         <outlet property="claraSpenceBust" destination="8wF-to-g5i" id="w8t-Sb-dP1"/>
@@ -158,7 +173,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="311" y="139"/>
+            <point key="canvasLocation" x="1248.8" y="138.98050974512745"/>
         </scene>
         <!--Menu View Controller-->
         <scene sceneID="VXs-cS-e7p">
@@ -182,7 +197,7 @@
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="38"/>
                                 <state key="normal" title="GENERAL"/>
                                 <connections>
-                                    <segue destination="BYZ-38-t0r" kind="show" identifier="segue_to_level_one" id="Q7w-i5-pmH"/>
+                                    <segue destination="vqd-yF-Fux" kind="show" identifier="segue_to_level_one" id="Q7w-i5-pmH"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f2R-7f-pbj">
@@ -197,7 +212,7 @@
                                     <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="BYZ-38-t0r" kind="show" identifier="segue_to_level_two" id="5jt-q9-v0U"/>
+                                    <segue destination="vqd-yF-Fux" kind="show" identifier="segue_to_level_two" id="5jt-q9-v0U"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pV8-fT-Frj">
@@ -212,7 +227,7 @@
                                     <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="BYZ-38-t0r" kind="show" identifier="segue_to_level_three" id="Phe-gJ-L6b"/>
+                                    <segue destination="vqd-yF-Fux" kind="show" identifier="segue_to_level_three" id="Phe-gJ-L6b"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o29-wG-ZNz">
@@ -362,7 +377,27 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IBw-35-yxw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1902" y="161"/>
+            <point key="canvasLocation" x="2840.8000000000002" y="160.56971514242881"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="eIb-9c-gAH">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="vqd-yF-Fux" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="YbJ-Ga-Rym">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="gbE-9s-IUu"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AoM-24-15x" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="309.60000000000002" y="138.98050974512745"/>
         </scene>
     </scenes>
     <resources>
@@ -372,6 +407,6 @@
         <image name="settingsIcon" width="471" height="471"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="5jt-q9-v0U"/>
+        <segue reference="Phe-gJ-L6b"/>
     </inferredMetricsTieBreakers>
 </document>
