--- a/SPAPP/Base.lproj/Main.storyboard
+++ b/SPAPP/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="jhN-uh-UJv">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="jhN-uh-UJv">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -245,7 +245,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="f2R-7f-pbj" firstAttribute="centerY" secondItem="YzP-zR-ulj" secondAttribute="centerY" id="DEi-Dh-bUe"/>
                             <constraint firstItem="o29-wG-ZNz" firstAttribute="trailing" secondItem="YzP-zR-ulj" secondAttribute="trailing" constant="-9" id="GrM-NG-cRy"/>
@@ -279,32 +279,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Hi! We are Brooke and Skyler, the creators of this app. We are currently a 9th grader and 7th grader at the Spence School. " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="7" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XaK-fc-18b">
-                                <rect key="frame" x="44" y="49" width="237" height="143"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="237" id="gnX-ER-RT7"/>
-                                    <constraint firstAttribute="height" constant="500" id="rX9-Wj-CfS" userLabel="height = 400"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y4n-iB-nU5">
-                                <rect key="frame" x="69" y="117" width="237" height="500"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="500" id="M8l-rq-xGS"/>
-                                    <constraint firstAttribute="width" constant="237" id="U8r-oq-AKg"/>
-                                </constraints>
-                                <string key="text">We moved here two years, and we would have loved a way to learn more about Spence. SPAPP (Spence App) is a way for newcomers to learn more about our school. Have fun!</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contact us at spenceapp@gmail.com" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eAd-aF-8fQ">
-                                <rect key="frame" x="68.5" y="450.5" width="237" height="100"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Welcome to SPAPP! How well do you know Spence? Take the quiz to find out! Contact us at spenceapp@gmail.com" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eAd-aF-8fQ">
+                                <rect key="frame" x="33" y="177" width="311" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="7ij-sp-7Fj"/>
-                                    <constraint firstAttribute="width" constant="237" id="Ozd-sA-JSc"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="100" id="Fvp-cs-QgV"/>
+                                    <constraint firstAttribute="width" constant="311" id="rh3-Cr-uPL"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="There are three catagories: General, Trivia, and History. Each round has 6 questions, which are selected randomly. Good luck! " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yaw-wa-yfC">
+                                <rect key="frame" x="16" y="242" width="327" height="188"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="JiP-HT-mrb"/>
+                                    <constraint firstAttribute="width" constant="350" id="Qyh-a3-Rgd"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -313,12 +303,11 @@
                         </subviews>
                         <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="eAd-aF-8fQ" firstAttribute="centerY" secondItem="KyJ-pI-ilr" secondAttribute="centerY" multiplier="1.5" id="Ja7-MV-efH"/>
+                            <constraint firstItem="eAd-aF-8fQ" firstAttribute="top" secondItem="wDA-Hd-Twu" secondAttribute="bottom" constant="113" id="1ZG-YL-JgB"/>
+                            <constraint firstItem="eAd-aF-8fQ" firstAttribute="centerX" secondItem="KyJ-pI-ilr" secondAttribute="centerX" id="BYS-eu-ADZ"/>
                             <constraint firstItem="eAd-aF-8fQ" firstAttribute="centerX" secondItem="KyJ-pI-ilr" secondAttribute="centerX" id="N3t-pj-eGe"/>
-                            <constraint firstItem="XaK-fc-18b" firstAttribute="centerX" secondItem="KyJ-pI-ilr" secondAttribute="centerX" id="YVZ-YL-LI7"/>
-                            <constraint firstItem="XaK-fc-18b" firstAttribute="centerY" secondItem="KyJ-pI-ilr" secondAttribute="centerY" multiplier="0.6" id="jm5-qg-d0X"/>
-                            <constraint firstItem="Y4n-iB-nU5" firstAttribute="centerX" secondItem="KyJ-pI-ilr" secondAttribute="centerX" id="tOI-Oq-Yf4"/>
-                            <constraint firstItem="Y4n-iB-nU5" firstAttribute="centerY" secondItem="KyJ-pI-ilr" secondAttribute="centerY" multiplier="1.1" id="yVQ-jP-FDg"/>
+                            <constraint firstItem="5sr-Mx-MET" firstAttribute="top" secondItem="yaw-wa-yfC" secondAttribute="bottom" constant="275" id="RQE-qe-HHa"/>
+                            <constraint firstItem="yaw-wa-yfC" firstAttribute="centerX" secondItem="KyJ-pI-ilr" secondAttribute="centerX" id="hP8-0F-Sjz"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="MuB-29-2Cr">
@@ -351,6 +340,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="c5Z-OR-s7c">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.98825462139999998" green="1" blue="0.36187980539999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -383,12 +373,14 @@
         <scene sceneID="eIb-9c-gAH">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="vqd-yF-Fux" sceneMemberID="viewController">
+                    <extendedEdge key="edgesForExtendedLayout" top="YES"/>
                     <toolbarItems/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics"/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="YbJ-Ga-Rym">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.98825462139999998" green="1" blue="0.36187980539999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
