--- a/SPAPP/Base.lproj/Main.storyboard
+++ b/SPAPP/Base.lproj/Main.storyboard
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="jhN-uh-UJv">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="jhN-uh-UJv">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="AvenirNext.ttc">
+            <string>AvenirNext-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Quiz View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -279,35 +284,67 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Welcome to SPAPP! How well do you know Spence? Take the quiz to find out! Contact us at spenceapp@gmail.com" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eAd-aF-8fQ">
-                                <rect key="frame" x="33" y="177" width="311" height="100"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Spence!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YU7-5a-KR6">
+                                <rect key="frame" x="111.5" y="89" width="152.5" height="22"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eAd-aF-8fQ">
+                                <rect key="frame" x="32" y="122" width="311" height="153"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="7ij-sp-7Fj"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="100" id="Fvp-cs-QgV"/>
                                     <constraint firstAttribute="width" constant="311" id="rh3-Cr-uPL"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <string key="text">3 years ago we transferred to The Spence School from our school in Hong Kong.
+We remember sitting in the Admissions Office, (just as you are now), waiting our turn to be interviewed and nervously leafing through the yearbooks and school brochures.</string>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="There are three catagories: General, Trivia, and History. Each round has 6 questions, which are selected randomly. Good luck! " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yaw-wa-yfC">
-                                <rect key="frame" x="16" y="242" width="327" height="188"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="7" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yaw-wa-yfC">
+                                <rect key="frame" x="32" y="286" width="311" height="153"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="150" id="JiP-HT-mrb"/>
-                                    <constraint firstAttribute="width" constant="350" id="Qyh-a3-Rgd"/>
+                                    <constraint firstAttribute="width" constant="311" id="Qyh-a3-Rgd"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <string key="text">When we started to code, we decided our first project would be a quiz app on Spence - an interactive platform to learn more about Spence, its founding and its culture; something fun for girls and their parents to play with while visiting Spence.
+We named our creation SPAPP (get it?) </string>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cox-PO-IeK">
+                                <rect key="frame" x="32.5" y="450" width="311" height="109.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="311" id="cSC-Q8-MhB"/>
+                                </constraints>
+                                <string key="text">After a crash course in setting up an LLC and late nights fixing the bugs in our code, we passed the Apple App Review Board and SPAPP went live on the App store
+June 7, 2018.</string>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="We hope you enjoy playing with it as much as we enjoyed creating it. Good luck!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bDb-IE-3lH">
+                                <rect key="frame" x="32" y="570.5" width="311" height="66"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="311" id="u2v-zz-rkB"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="eAd-aF-8fQ" firstAttribute="top" secondItem="wDA-Hd-Twu" secondAttribute="bottom" constant="113" id="1ZG-YL-JgB"/>
-                            <constraint firstItem="eAd-aF-8fQ" firstAttribute="centerX" secondItem="KyJ-pI-ilr" secondAttribute="centerX" id="BYS-eu-ADZ"/>
-                            <constraint firstItem="eAd-aF-8fQ" firstAttribute="centerX" secondItem="KyJ-pI-ilr" secondAttribute="centerX" id="N3t-pj-eGe"/>
-                            <constraint firstItem="5sr-Mx-MET" firstAttribute="top" secondItem="yaw-wa-yfC" secondAttribute="bottom" constant="275" id="RQE-qe-HHa"/>
-                            <constraint firstItem="yaw-wa-yfC" firstAttribute="centerX" secondItem="KyJ-pI-ilr" secondAttribute="centerX" id="hP8-0F-Sjz"/>
+                            <constraint firstItem="yaw-wa-yfC" firstAttribute="centerX" secondItem="YU7-5a-KR6" secondAttribute="centerX" id="7sb-bo-W0u"/>
+                            <constraint firstItem="yaw-wa-yfC" firstAttribute="top" secondItem="eAd-aF-8fQ" secondAttribute="bottom" constant="11" id="IzQ-1r-unr"/>
+                            <constraint firstItem="cox-PO-IeK" firstAttribute="centerX" secondItem="YU7-5a-KR6" secondAttribute="centerX" id="Q9w-9D-7gN"/>
+                            <constraint firstItem="bDb-IE-3lH" firstAttribute="centerX" secondItem="YU7-5a-KR6" secondAttribute="centerX" id="Xdq-Ao-rO5"/>
+                            <constraint firstItem="bDb-IE-3lH" firstAttribute="top" secondItem="cox-PO-IeK" secondAttribute="bottom" constant="11" id="ZZw-Qh-EhB"/>
+                            <constraint firstItem="YU7-5a-KR6" firstAttribute="centerX" secondItem="KyJ-pI-ilr" secondAttribute="centerX" id="ejK-p0-TuR"/>
+                            <constraint firstItem="eAd-aF-8fQ" firstAttribute="centerX" secondItem="YU7-5a-KR6" secondAttribute="centerX" id="f82-3u-T5h"/>
+                            <constraint firstItem="cox-PO-IeK" firstAttribute="top" secondItem="yaw-wa-yfC" secondAttribute="bottom" constant="11" id="srf-ub-um5"/>
+                            <constraint firstItem="YU7-5a-KR6" firstAttribute="centerY" secondItem="KyJ-pI-ilr" secondAttribute="centerY" multiplier="0.3" id="tqN-9Z-tDQ"/>
+                            <constraint firstItem="eAd-aF-8fQ" firstAttribute="top" secondItem="YU7-5a-KR6" secondAttribute="bottom" constant="11" id="vqb-8z-OIk"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="MuB-29-2Cr">
