--- a/SPAPP/Base.lproj/Main.storyboard
+++ b/SPAPP/Base.lproj/Main.storyboard
@@ -209,7 +209,9 @@
                                     <constraint firstAttribute="width" constant="190" id="iLJ-vI-gtV"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="38"/>
-                                <state key="normal" title="GENERAL"/>
+                                <state key="normal" title="GENERAL">
+                                    <color key="titleColor" red="0.0" green="0.47843137254901957" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                                 <connections>
                                     <segue destination="vqd-yF-Fux" kind="show" identifier="segue_to_level_one" id="Q7w-i5-pmH"/>
                                 </connections>
